check consensus method fixed